pulling in changes from Jacoby

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="/static/stylesheets/nav.css">
+    <link rel="stylesheet" href="/static/stylesheets/index.css">
 
     <script src="./bower_components/angular/angular.min.js"></script>
 
@@ -30,6 +30,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.js"></script>
 
     <script type="text/javascript" src="./js/config/routes.js"></script>
+
+    <script type="text/javascript" src="./js/config/index.js"></script>
 
     <script type="text/javascript" src="./js/factory/authFactory.js"></script>
 
@@ -57,7 +59,7 @@
 
   <body>
 
-    <!-- <div ng-include="'static/partials/nav.html'"></div> -->
+    <div ng-include="'static/partials/nav.html'"></div>
 
     <div class='' ui-view>
 
